samples/_failures_safe/1761629959_e57162_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_862cd077.c: In function ‘print_state_info’:
./samples/SAFE/__tmp_862cd077.c:179:16: error: missing terminating " character
  179 |         printf("Buffer
      |                ^~~~~~~
./samples/SAFE/__tmp_862cd077.c:179:9: error: expected expression at end of input
  179 |         printf("Buffer
      |         ^~~~~~
./samples/SAFE/__tmp_862cd077.c:179:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_862cd077.c:179:9: error: expected declaration or statement at end of input
